objects/Group_Section__c.object
<CustomObject>
    <description>Group Section information associated to a Group Account will be stored using this object</description>
    <fields>
        <fullName>ACA_Indicator__c</fullName>
        <label>ACA Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix__c</fullName>
        <description>The prefix assigned to the National Account Customer by BCBSA that is associated with this Group Section.</description>
        <label>Alpha Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACZ</fullName>
                </value>
                <value>
                    <fullName>BAF</fullName>
                </value>
                <value>
                    <fullName>BAU</fullName>
                </value>
                <value>
                    <fullName>BNH</fullName>
                </value>
                <value>
                    <fullName>BOK</fullName>
                </value>
                <value>
                    <fullName>BRQ</fullName>
                </value>
                <value>
                    <fullName>CKX</fullName>
                </value>
                <value>
                    <fullName>EAX</fullName>
                </value>
                <value>
                    <fullName>FTC</fullName>
                </value>
                <value>
                    <fullName>GNF</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>HXN</fullName>
                </value>
                <value>
                    <fullName>HYC</fullName>
                </value>
                <value>
                    <fullName>MYX</fullName>
                </value>
                <value>
                    <fullName>OGE</fullName>
                </value>
                <value>
                    <fullName>ONP</fullName>
                </value>
                <value>
                    <fullName>OPC</fullName>
                </value>
                <value>
                    <fullName>YUB</fullName>
                </value>
                <value>
                    <fullName>YUK</fullName>
                </value>
                <value>
                    <fullName>YUN</fullName>
                </value>
                <value>
                    <fullName>YUP</fullName>
                </value>
                <value>
                    <fullName>YUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Effective_Date__c</fullName>
        <label>Assignment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_End_Date__c</fullName>
        <label>Assignment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Automated_Eligibility_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automated Eligibility Process</description>
        <label>Automated Eligibility Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Cancel_Date__c</fullName>
        <label>Benefit Agreement Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Description__c</fullName>
        <label>Benefit Agreement Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Effective_Date__c</fullName>
        <label>Benefit Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Number__c</fullName>
        <label>Benefit Agreement Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Renewal_Date__c</fullName>
        <label>Benefit Agreement Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Agreement</label>
        <referenceTo>Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Group Sections</relationshipLabel>
        <relationshipName>Group_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Billing profile number for the group section from Blue Star</description>
        <label>Billing</label>
        <referenceTo>Billing__c</referenceTo>
        <relationshipLabel>Group Sections</relationshipLabel>
        <relationshipName>Group_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <description>Cancellation code to be sent to Accounts Receivable</description>
        <label>Cancellation Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBS - Cancel BlueSTAR Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>Cancellation Date of the Group Section</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Explanation__c</fullName>
        <description>Free form explanation of why Group Section is being cancelled</description>
        <label>Cancellation Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Reason why Group Section is being cancelled</description>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>401 Misc - Below Percentage</fullName>
                </value>
                <value>
                    <fullName>402 Misc - Reason/Unknown</fullName>
                </value>
                <value>
                    <fullName>403 Misc - Non-Payment of Dues</fullName>
                </value>
                <value>
                    <fullName>404 Misc - Grp Moved Out of State</fullName>
                </value>
                <value>
                    <fullName>405 Misc - Never Effective</fullName>
                </value>
                <value>
                    <fullName>406 Misc - New Group Number</fullName>
                </value>
                <value>
                    <fullName>408 Misc - Other UW Requirements</fullName>
                </value>
                <value>
                    <fullName>409 Misc - Acct has 0 Subs</fullName>
                </value>
                <value>
                    <fullName>410 Misc - Coverage Discontinued</fullName>
                </value>
                <value>
                    <fullName>411 Misc - New Decision Maker</fullName>
                </value>
                <value>
                    <fullName>412 Misc - Trans to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>413 Misc - Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414 Misc - Cons Cov w/1+ Carrier</fullName>
                </value>
                <value>
                    <fullName>415 Moved to Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>416 Misc - Owner Chg/Merg/Acq</fullName>
                </value>
                <value>
                    <fullName>417 Misc - Parent Co Decision</fullName>
                </value>
                <value>
                    <fullName>418 Misc - Absorbed by ParentGrp</fullName>
                </value>
                <value>
                    <fullName>419 Misc - Out-of-Business</fullName>
                </value>
                <value>
                    <fullName>427 Misc - Political</fullName>
                </value>
                <value>
                    <fullName>433 Misc - Trans Due to Ben Chg</fullName>
                </value>
                <value>
                    <fullName>436 Misc - Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>501 Claims - Service/Problems</fullName>
                </value>
                <value>
                    <fullName>502 Mbrship - Billing Serv/Prob</fullName>
                </value>
                <value>
                    <fullName>503 Service - Local Office</fullName>
                </value>
                <value>
                    <fullName>504 Service - Customer Service</fullName>
                </value>
                <value>
                    <fullName>608 Network - PPO/POS Hospital</fullName>
                </value>
                <value>
                    <fullName>609 Network - PPO/POS Phys</fullName>
                </value>
                <value>
                    <fullName>612 Network - HMO Hospital</fullName>
                </value>
                <value>
                    <fullName>613 Network - HMO Phys Network</fullName>
                </value>
                <value>
                    <fullName>614 Prod Design - Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <description>Cancellation status of the group section</description>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Submitted_Date__c</fullName>
        <description>The date when the cancellation request is submitted</description>
        <label>Cancellation Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certs_Cancelling__c</fullName>
        <description>Certs Cancelling</description>
        <label>Certs Cancelling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Name__c</fullName>
        <label>Corporate Product Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Number__c</fullName>
        <label>Corporate Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delinquent_Letter_Release_Date__c</fullName>
        <description>The date that the Delinquent Letter was Released.</description>
        <label>Delinquent Letter Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliquent_Stage__c</fullName>
        <description>Indicates the Current Stage of Delinquency of the Billing Profile.</description>
        <label>Delinquent Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20 Day</fullName>
                </value>
                <value>
                    <fullName>30 Day</fullName>
                </value>
                <value>
                    <fullName>45 Day</fullName>
                </value>
                <value>
                    <fullName>60 Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Type__c</fullName>
        <description>Identifies the SSD area that has been assigned to process the claims for the Group Section</description>
        <label>Department Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date of the Group Section</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Unique identifier of Group Section for the Group Account</description>
        <externalId>true</externalId>
        <label>Group Section ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Funding type of the Group section</description>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSA_SSNK__c</fullName>
        <label>GSA SSNK</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>GS External Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Account__c</fullName>
        <description>Group Section related to the Group Account</description>
        <label>Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Sections</relationshipLabel>
        <relationshipName>Group_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Group Number of the Group Section (This number can be different compared to the Group Account Number - Starting with Y or Z observed)</description>
        <label>Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_SSNK__c</fullName>
        <label>Group SSNK</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Cancel_Code__c</fullName>
        <label>Group Section Cancel Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Cancel_Date__c</fullName>
        <label>Group Section Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section_Number__c</fullName>
        <label>Group Section Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Section_Original_Effective_Date__c</fullName>
        <label>Group Section Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_Code__c</fullName>
        <label>Insurance Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Number__c</fullName>
        <label>Internal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invitro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code indicating whether Invitro Coverage is included.</description>
        <label>Invitro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Plan_Number__c</fullName>
        <label>Market Plan Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maternity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code indicating whether Maternity Coverage is included.</description>
        <label>Maternity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Members_Cancelling__c</fullName>
        <description>Count of the Members Canelled</description>
        <label>Members Cancelling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of the Group Section</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Anniv_Period_Effective_Date__c</fullName>
        <description>BlueStar - Dental National Anniversary Period Effective Date</description>
        <label>National Anniv Period Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_To_Date__c</fullName>
        <description>Indicates how far a profile has been paid and reconciled.</description>
        <label>Paid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_SSNK__c</fullName>
        <label>Policy SSNK</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Cancellation_Date__c</fullName>
        <description>Requested Cancellation Date of the Group Section</description>
        <label>Requested Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Plan_Id__c</fullName>
        <label>Sales Plan Id</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <description>Section Number of the Group Section</description>
        <label>Section Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code indicating if self billing.</description>
        <label>Self Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serious_Mental_Illness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code indicating whether SMI Indicator was updated.</description>
        <label>Serious Mental Illness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speech__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code indicating whether Speech Coverage is included.</description>
        <label>Speech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Group Section</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Active_Members__c</fullName>
        <description>BlueStar - Total Active Member count</description>
        <label>Total Active Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Active_Subscribers__c</fullName>
        <description>Total Active Subscriber count</description>
        <label>Total Active Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cancel_Members__c</fullName>
        <description>Total Cancel Member count</description>
        <label>Total Cancel Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cancel_Subscribers__c</fullName>
        <description>Total Cancel Subscriber count</description>
        <label>Total Cancel Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Active_Members__c</fullName>
        <description>Total Dental Active Member count</description>
        <label>Total Dental Active Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Active_Subscribers__c</fullName>
        <description>Total Dental Active Subscriber count</description>
        <label>Total Dental Active Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Cancel_Members__c</fullName>
        <description>Total Dental Cancel Member count.</description>
        <label>Total Dental Cancel Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Cancel_Subscribers__c</fullName>
        <description>Total Dental Cancel Subscriber count</description>
        <label>Total Dental Cancel Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Healthcare_Active_Members__c</fullName>
        <description>Total Healthcare Active Member count.</description>
        <label>Total Healthcare Active Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Healthcare_Active_Subscribers__c</fullName>
        <description>Total Healthcare Active Subscriber count</description>
        <label>Total Healthcare Active Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Healthcare_Cancel_Members__c</fullName>
        <description>Total Healthcare Cancel Member Count</description>
        <label>Total Healthcare Cancel Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Healthcare_Cancel_Subscribers__c</fullName>
        <description>Total Healthcare Cancel Subscriber Count</description>
        <label>Total Healthcare Cancel Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Display_Ben_Agree_Number__c</fullName>
        <label>User Display Ben Agree Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Display_Section_Number__c</fullName>
        <label>User Display Section Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isInvitro__c</fullName>
        <label>isInvitro</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Group Section</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GS-{000000}</displayFormat>
        <label>Group Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>